--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <main>
         <header>
             <h1>Welcome to Blackjack Game</h1>
-            <p>Are you ready to play?</p>
+            <p>Are you ready to play?</p> NAH im good
         </header>
         <section>
             <button onclick="startGame()">Play</button>
