--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <title>Blackjack Game</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Jokerjack Online</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <main>
         <header>
-            <h1>Welcome to Blackjack Game</h1>
-            <p>Are you ready to play?</p> NAH im good
+            <h1>Welcome to Jokerjack Online</h1>
+            <p>Are you ready to play?</p>
         </header>
         <section>
             <button onclick="startGame()">Play</button>
@@ -16,7 +17,7 @@
     </main>
     <script>
         function startGame() {
-            window.location.href = "game.html";
+            window.location.href = "game.html"; 
         }
     </script>
 </body>
