--- a/game.html
+++ b/game.html
@@ -1,24 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <title>Blackjack Game - Play</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <main>
-        <header>
-            <h1>Blackjack Game</h1>
-            <p id="game-status">Game in progress...</p>
-        </header>
-        <section id="game-section">
-            <!-- Game elements will be dynamically added here -->
-        </section>
-    </main>
-    <script src="script.js"></script>
-    <script>
-        window.onload = function() {
-            startGame();
-        };
-    </script>
-</body>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Jokerjack - Play</title>
+        <link rel="stylesheet" href="gamestyle.css">
+        <script src="script.js"></script>
+    </head>
+
+    <body>
+        <h2>Dealer: <span id="dealer-sum"></span></h2>
+        <div id="dealer-cards">
+            <img id="hidden" src="./cards/BACK.png">
+        </div>
+
+        <h2>You: <span id="your-sum"></span></h2>
+        <div id="your-cards">
+        </div>
+
+        <br>
+        <button id="hit">Hit</button>
+        <button id="stay">Stay</button>
+        <p id="results"></p>
+    </body>
 </html>
