--- a/index.html
+++ b/index.html
@@ -1,8 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jokerjack Online</title>
-    <link rel="stylesheet" href="style.css">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f8f9fa;
+            color: #343a40;
+            margin: 0;
+            padding: 0;
+        }
+
+        header {
+            background-color: #007e71;
+            color: white;
+            padding: 1em;
+            text-align: center;
+        }
+
+        main {
+            max-width: 800px;
+            margin: 2em auto;
+            padding: 1em;
+            background-color: white;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+
+        h1, p {
+            margin: 0;
+        }
+
+        section {
+            text-align: center;
+            margin-top: 2em;
+        }
+
+        button, a {
+            display: inline-block;
+            margin: 0.5em;
+            padding: 0.5em 1em;
+            color: white;
+            background-color: #5a82ac;
+            text-decoration: none;
+            border-radius: 4px;
+            transition: background-color 0.3s ease;
+            border: none;
+            cursor: pointer;
+        }
+
+        button:hover, a:hover {
+            background-color: #a1b5ca;
+        }
+    </style>
 </head>
 <body>
     <main>
