--- a/index.html
+++ b/index.html
@@ -7,15 +7,16 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f8f9fa;
+            background-image: url(cards/70.jpg);
             color: #343a40;
             margin: 0;
             padding: 0;
+            font-family: 'Times New Roman', Times, serif
         }
 
         header {
             background-color: #007e71;
-            color: white;
+            color: rgb(255, 255, 255);
             padding: 1em;
             text-align: center;
         }
@@ -24,7 +25,7 @@
             max-width: 800px;
             margin: 2em auto;
             padding: 1em;
-            background-color: white;
+            background-color: rgb(255, 255, 255);
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
@@ -42,8 +43,8 @@
             display: inline-block;
             margin: 0.5em;
             padding: 0.5em 1em;
-            color: white;
-            background-color: #5a82ac;
+            color: rgb(255, 255, 255);
+            background-color: rgb(4, 158, 91);
             text-decoration: none;
             border-radius: 4px;
             transition: background-color 0.3s ease;
@@ -63,14 +64,9 @@
             <p>Are you ready to play?</p>
         </header>
         <section>
-            <button onclick="startGame()">Play</button>
+            <a href="game.html">Play</a>
             <a href="instructions.html">Instructions</a>
         </section>
     </main>
-    <script>
-        function startGame() {
-            window.location.href = "game.html"; 
-        }
-    </script>
 </body>
 </html>
