--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-image: url(cards/70.jpg);
+            background-image: url(cards/images/image_2.jpg);
             color: #343a40;
             margin: 0;
             padding: 0;
@@ -67,6 +67,5 @@
             <a href="game.html">Play</a>
             <a href="instructions.html">Instructions</a>
         </section>
-    </main>
 </body>
 </html>
