--- a/instructions.html
+++ b/instructions.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>Blackjack Game - Instructions</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <style>
     body {
@@ -10,6 +10,7 @@
         color: #343a40;
         margin: 0;
         padding: 0;
+        background-image: url(cards/images/image_1.jpg);
         font-family: 'Times New Roman', Times, serif
     }
 
