need to fix broke function

--- a/game.html
+++ b/game.html
@@ -9,6 +9,10 @@
     </head>
 
     <body>
+        <div id="topLeftSection">
+            <a href="index.html"><button>Return Home</button></a>
+            <button id="outOfMoney">Out of money?</button>
+        </div>
         <main>
         <h2>Dealer: <span id="dealer-sum"></span></h2>
         <div id="dealer-cards">
