--- a/index.html
+++ b/index.html
@@ -67,5 +67,6 @@
             <a href="game.html">Play</a>
             <a href="instructions.html">Instructions</a>
         </section>
+        <section><b></b></section>
 </body>
 </html>
