--- a/index.html
+++ b/index.html
@@ -67,6 +67,6 @@
             <a href="game.html">Play</a>
             <a href="instructions.html">Instructions</a>
         </section>
-        <section><b></b></section>
+        <section><b>By : Yann, Liam, Fuxuan</b></section>
 </body>
 </html>
