--- a/index.html
+++ b/index.html
@@ -68,5 +68,6 @@
             <a href="instructions.html">Instructions</a>
         </section>
         <section><b>By : Yann, Liam, Fuxuan, and Alex</b></section>
+        <img src="" width="150px">
 </body>
 </html>
