--- a/index.html
+++ b/index.html
@@ -68,6 +68,6 @@
             <a href="instructions.html">Instructions</a>
         </section>
         <section><b>By : Yann, Liam, Fuxuan, and Alex</b></section>
-        <img src="" width="150px">
+        <img src="pngtree-d-illustration-of-glowing-neon-lights-on-black-background-featuring-blackjack-picture-image_4844620.jpg" width="150px">
 </body>
 </html>
