asd Co-authored-by: FuxuanX689781 <Xfx689781@users.noreply.github.com> Co-authored-by: LiamRodrigs <LiamRodrigs@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -55,6 +55,15 @@
         button:hover, a:hover {
             background-color: #a1b5ca;
         }
+        body {
+        background-image: url("pngtree-d-illustration-of-glowing-neon-lights-on-black-background-featuring-blackjack-picture-image_4844620.jpg");
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center center;
+        margin: 0;
+        padding: 0;
+        font-family: 'time';
+        }
     </style>
 </head>
 <body>
