--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
         button:hover, a:hover {
             background-color: #a1b5ca;
         }
+
         body {
         background-image: url("pngtree-d-illustration-of-glowing-neon-lights-on-black-background-featuring-blackjack-picture-image_4844620.jpg");
         background-size: cover;
@@ -77,6 +78,6 @@
             <a href="instructions.html">Instructions</a>
         </section>
         <section><b>By : Yann, Liam, Fuxuan, and Alex</b></section>
-        <img src="pngtree-d-illustration-of-glowing-neon-lights-on-black-background-featuring-blackjack-picture-image_4844620.jpg" width="150px">
+        <body backround = "pngtree-d-illustration-of-glowing-neon-lights-on-black-background-featuring-blackjack-picture-image_4844620.jpg"
 </body>
 </html>
