--- a/index.html
+++ b/index.html
@@ -56,8 +56,7 @@
             background-color: #a1b5ca;
         }
 
-        body {
-        background-image: url("pngtree-d-illustration-of-glowing-neon-lights-on-black-background-featuring-blackjack-picture-image_4844620.jpg");
+        main body {
         background-size: cover;
         background-repeat: no-repeat;
         background-position: center center;
@@ -78,6 +77,6 @@
             <a href="instructions.html">Instructions</a>
         </section>
         <section><b>By : Yann, Liam, Fuxuan, and Alex</b></section>
-        <body backround = "pngtree-d-illustration-of-glowing-neon-lights-on-black-background-featuring-blackjack-picture-image_4844620.jpg"
+        <body backround = "pngtree-d-illustration-of-glowing-neon-lights-on-black-background-featuring-blackjack-picture-image_4844620.jpg">
 </body>
 </html>
