--- a/index.html
+++ b/index.html
@@ -2,17 +2,22 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jokerjack Online</title>
     <style>
         body {
+            background-image: url(pngtree-d-illustration-of-glowing-neon-lights-on-black-background-featuring-blackjack-picture-image_4844620.jpg);
             font-family: Arial, sans-serif;
-            background-image: url(cards/images/image_2.jpg);
             color: #343a40;
             margin: 0;
             padding: 0;
-            font-family: 'Times New Roman', Times, serif
-        }
+            font-size: 17px;
+            font-family: 'Cormorant Garamond', Times, serif
+            
+        } 
 
         header {
             background-color: #007e71;
@@ -57,6 +62,7 @@
         }
 
         main body {
+        background-image: url(pngtree-d-illustration-of-glowing-neon-lights-on-black-background-featuring-blackjack-picture-image_4844620.jpg);
         background-size: cover;
         background-repeat: no-repeat;
         background-position: center center;
